Added config files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,7 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"flask-app-2","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: imagedefinitions.json
+    files: 
+      - imagedefinitions.json
+      - appspec.yaml
+      - taskdef.json
