--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: taskdef.json
         LoadBalancerInfo:
-          ContainerName: "flask-container"
+          ContainerName: "flask-app-2"
           ContainerPort: 5000
