--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ Resources:
       Properties:
         TaskDefinition: "<TASK_DEFINITION>"
         LoadBalancerInfo:
-          ContainerName: "flask-app"
+          ContainerName: "flask-app-2"
           ContainerPort: 5000
